refactor: more detailed history output
